// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly diplays alert when URL is none 1`] = `
<div>
  <Iframe />
</div>
`;

exports[`Correctly displays alert when URL is empty 1`] = `
<div>
  <Iframe
    url=""
  />
</div>
`;

exports[`Correctly displays iframe when URL exists 1`] = `
<div>
  <Iframe
    url="test"
  />
</div>
`;

exports[`Correctly displays links when user is admin 1`] = `
<div>
  <Iframe />
</div>
`;
